This is a test commit

--- a/classes/BuildAccount.cls
+++ b/classes/BuildAccount.cls
@@ -1,7 +1,7 @@
 public class BuildAccount{
 
 public static void buildaccount(){
-
+//This a comment
 Account Act = new Account();
 Act.name = 'Testname';
 insert act;
